# src/domain/entity/mod.rs
@@ -12,7 +12,6 @@ pub mod chatbot_step;
 pub mod chatbot_step_trigger;
 pub mod conversation_tag;
 pub mod expertise_tag;
-pub mod livechat_audit_log;
 pub mod member_history;
 pub mod operator_expertise;
 pub mod operator_profile;
@@ -23,7 +22,6 @@ pub mod livechat_max_sessions_mode;
 pub mod livechat_rule_action;
 pub mod livechat_chatbot_condition;
 pub mod livechat_step_type;
-pub mod livechat_audit_event;
 pub mod livechat_persona;
 pub mod livechat_rated_persona;
 pub mod livechat_session_status;
@@ -62,9 +60,6 @@ pub use conversation_tag::ConversationTagId;
 pub use expertise_tag::ExpertiseTag;
 pub use expertise_tag::ExpertiseTagBuilder;
 pub use expertise_tag::ExpertiseTagId;
-pub use livechat_audit_log::LivechatAuditLog;
-pub use livechat_audit_log::LivechatAuditLogBuilder;
-pub use livechat_audit_log::LivechatAuditLogId;
 pub use member_history::MemberHistory;
 pub use member_history::MemberHistoryBuilder;
 pub use member_history::MemberHistoryId;
@@ -87,7 +82,6 @@ pub use livechat_max_sessions_mode::LivechatMaxSessionsMode;
 pub use livechat_rule_action::LivechatRuleAction;
 pub use livechat_chatbot_condition::LivechatChatbotCondition;
 pub use livechat_step_type::LivechatStepType;
-pub use livechat_audit_event::LivechatAuditEvent;
 pub use livechat_persona::LivechatPersona;
 pub use livechat_rated_persona::LivechatRatedPersona;
 pub use livechat_session_status::LivechatSessionStatus;
