# src/domain/event/livechat_audit_log_event_handlers.rs
@@ -1,10 +1,0 @@
-//! Event handler trait for LivechatAuditLog events
-//!
-//! Generated by metaphor-schema. Do not edit manually.
-
-use backbone_messaging::EventHandler;
-use super::LivechatAuditLogEvent;
-
-/// Event handler for LivechatAuditLog events.
-/// Implement this trait to react to LivechatAuditLog lifecycle events.
-pub trait LivechatAuditLogEventHandler: EventHandler<LivechatAuditLogEvent> {}
